--- a/html/pantalla3.html
+++ b/html/pantalla3.html
@@ -23,7 +23,7 @@
                 <p>
                     <label for="">Fotografias</label>
                 </p>
-                <button type="submit" class="btn3">Adjuntar archivos</button>
+                <button class="btn"><label for="fotos">Subir<input type="file" class="btnFile" id="fotos"></label></button>
                 <label for="">PNG. JPG.</label>
                 <p>
                     <label for="">Descripción del producto</label>
