Modificacion de nombres en archivos y comentarios definidos en el aplicativo.

--- a/html/entregaPedido.html
+++ b/html/entregaPedido.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="../css/proyecto.css">
 </head>
 <body>
+    <!-- Rol comprador para entrega de pedido -->
     <header>
         <h2 class="headerP6">Datos de entrega de pedidos</h2>
     </header>
+    <!-- Formulario para completar pedido -->
     <form action="">
         <h2 class="h2P6">Datos para completar tu pedido</h2>
         <label for="" class="label2P5">Confirme los siguientes datos para completar su pedido:</label>
@@ -21,8 +23,7 @@
         <p>
             <label for="" class="labelP6">Valide su dirección en el mapa.</label>
             
-        </p>  
-        
+        </p> 
         <p>
             <label for="">Numero de celular: </label>
             <input class="input3P6" type="text" placeholder="+57">
@@ -50,18 +51,19 @@
             <button type="button" class="btn5" > Finalizar pedido </button>
         </p>
     </form>
+    <!-- Pie de pagina o footer para enlaces a pantalla adicionales -->
     <h3 class="mapa" >Mapa de navegación</h3>
     <footer class="footerP3">
         <div class="divfooter">
             <label for="">Acerca de</label><br>
             <a href="../index.html">Inicio</a><br>
-            <a href="pantalla2.html">Iniciar sesion</a><br>
+            <a href="inicioSesion.html">Iniciar sesion</a><br>
         </div>
         <div class="divfooter">
             <label for="###">Vendedor</label><br>
-            <a href="pantalla3.html">Ingresar producto nuevo</a><br>
-            <a href="pantalla4.html">Medios de pago</a><br>
-            <a href="pantalla5.html">Confirmacion pagos</a><br>
+            <a href="registroArticulo.html">Ingresar producto nuevo</a><br>
+            <a href="ingresarMetodoPago.html">Medios de pago</a><br>
+            <a href="ingresarMetodoPago2.html">Confirmacion pagos</a><br>
         </div>
         <div class="divfooter">
             <label for="">Redes Sociales</label><br>
@@ -72,8 +74,8 @@
         </div>
         <div class="divfooter">
             <label for="">Cliente</label><br>
-            <a href="pantalla6.html">Datos de entrega</a><br>
-            <a href="pantalla1.html">Registrate</a><br>
+            <a href="entregaPedido.html">Datos de entrega</a><br>
+            <a href="registro.html">Registrate</a><br>
         </div>
     </footer>
 </body>
