--- a/html/ingresarMetodoPago2.html
+++ b/html/ingresarMetodoPago2.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="../css/proyecto.css">
 </head>
 <body>
+    <!-- Continuacion ingreso metodos de pago -->
     <div class="hp5">
         <h2 class="pagoP5" >Confirmacion metodos de pago</h2>
         <img class="img5" src="/img/imagen5.png" alt="Manos">
     </div>
     <h4 class="h4P3">Establece los metodos de pago</h4>
+    <!-- Formulario para completar metodos de pago -->
     <form action="">
         <h2>Ingrese su información de banco</h2>
         <h4>¿Usara pagos con TC, TD o transferencia bancaria?</h4>
@@ -49,18 +51,19 @@
             <button type="submit" class="btn4">Completar</button>
         </p>
     </form>
+    <!-- Pie de pagina o footer para enlaces a pantalla adicionales -->
     <h3 class="mapa" >Mapa de navegación</h3>
     <footer class="">
         <div class="divfooter">
             <label for="">Acerca de</label><br>
             <a href="../index.html">Inicio</a><br>
-            <a href="pantalla2.html">Iniciar sesion</a><br>
+            <a href="inicioSesion.html">Iniciar sesion</a><br>
         </div>
         <div class="divfooter">
             <label for="###">Vendedor</label><br>
-            <a href="pantalla3.html">Ingresar producto nuevo</a><br>
-            <a href="pantalla4.html">Medios de pago</a><br>
-            <a href="pantalla5.html">Confirmacion pagos</a><br>
+            <a href="registroArticulo.html">Ingresar producto nuevo</a><br>
+            <a href="ingresarMetodoPago.html">Medios de pago</a><br>
+            <a href="ingresarMetodoPago2.html">Confirmacion pagos</a><br>
         </div>
         <div class="divfooter">
             <label for="">Redes Sociales</label><br>
@@ -71,8 +74,8 @@
         </div>
         <div class="divfooter">
             <label for="">Cliente</label><br>
-            <a href="pantalla6.html">Datos de entrega</a><br>
-            <a href="pantalla1.html">Registrate</a><br>
+            <a href="entregaPedido.html">Datos de entrega</a><br>
+            <a href="registro.html">Registrate</a><br>
         </div>
     </footer>
 </body>
