--- a/html/vistaProducto.html
+++ b/html/vistaProducto.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/proyecto.css">
 </head>
 <body>
+    <!-- Encabezado de la pagina  -->
     <header class="headerIndex">
         <ul class="ul1">
             <li>
@@ -20,18 +21,18 @@
             </ul>
         </li>
         </ul>
-
+        <!-- Barra de busqueda -->
         <div class="divIndex">
                 <input type="text" placeholder="Buscar..." class="inputIndex">
                 <button class="btn16"><img src="../img/glassIcon.png" alt="" class="imgIndex2"></button>
         </div>
 
         <div class="divIndex2">
-            <a href="html/pantalla2.html" class="aIndex2">Iniciar sesion</a>
-            <a href="html/pantalla1.html" class="aIndex2">Registrarse</a>
+            <a href="html/inicioSesion.html" class="aIndex2">Iniciar sesion</a>
+            <a href="html/registro.html" class="aIndex2">Registrarse</a>
         </div>
     </header>
-
+    <!-- Vista amplia y detallada en caso de seleccionar un producto -->
     <form action="" class="formP7">
         <button class="btn18"><a href="/index.html" class="aP7">Regresar</a></button>
         <div class="divP7">
@@ -52,19 +53,19 @@
             </div>
         </div>
     </form>
-
+    <!-- Pie de pagina o footer para enlaces a pantalla adicionales -->
     <h3 class="mapa">Mapa de navegacion</h3>
     <footer>
         <div class="divfooter">
             <label for="">Acerca de</label><br>
             <a href="index.html">Inicio</a><br>
-            <a href="/html/pantalla2.html">Iniciar sesion</a>
+            <a href="/html/inicioSesion.html">Iniciar sesion</a>
         </div>
         <div class="divfooter">
             <label for="###">Vendedor</label><br>
-            <a href="/html/pantalla3.html">Ingresar producto nuevo</a><br>
-            <a href="/html/pantalla4.html">Medios de pago</a><br>
-            <a href="/html/pantalla5.html">Confirmacion pagos</a><br>
+            <a href="/html/registroArticulo.html">Ingresar producto nuevo</a><br>
+            <a href="/html/ingresarMetodoPago.html">Medios de pago</a><br>
+            <a href="/html/ingresarMetodoPago2.html">Confirmacion pagos</a><br>
         </div>
         <div class="divfooter">
             <label for="">Redes Sociales</label><br>
@@ -75,8 +76,8 @@
         </div>
         <div class="divfooter">
             <label for="">Cliente</label><br>
-            <a href="/html/pantalla6.html">Datos de entrega</a><br>
-            <a href="/html/pantalla1.html">Registrate</a><br>
+            <a href="/html/entregaPedido.html">Datos de entrega</a><br>
+            <a href="/html/registro.html">Registrate</a><br>
         </div>
     </footer>
 </body>
