--- a/html/ingresarMetodoPago.html
+++ b/html/ingresarMetodoPago.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="../css/proyecto.css">
 </head>
 <body>
+    <!-- Agregar medios de pago rol de vendedor -->
     <div class="hp4">
         <h2 class="pagop4" >Medios de pago</h2>
         <img class="img4" src="../img/imagen4.png" alt="Billetera">
     </div>
-    <h2 class="h4P3" > Tipos de pago y tiempos de entrega </h2>  
+    <h2 class="h4P3" > Tipos de pago y tiempos de entrega </h2>
+    <!-- Formulario para ingresar informacion del pagos  -->
     <form action="" class="form3" >
         <p>
             <label for=""> Tipos de pago </label>
@@ -32,18 +34,19 @@
         <button type="button" class="btn5" > Finalizar </button>
         </p>
     </form>
+    <!-- Pie de pagina o footer para enlaces a pantalla adicionales -->
     <h3 class="mapa" >Mapa de navegación</h3>
     <footer>
         <div class="divfooter">
             <label for="">Acerca de</label><br>
             <a href="../index.html">Inicio</a><br>
-            <a href="pantalla2.html">Iniciar sesion</a><br>
+            <a href="inicioSesion.html">Iniciar sesion</a><br>
         </div>
         <div class="divfooter">
             <label for="###">Vendedor</label><br>
-            <a href="pantalla3.html">Ingresar producto nuevo</a><br>
-            <a href="pantalla4.html">Medios de pago</a><br>
-            <a href="pantalla5.html">Confirmacion pagos</a><br>
+            <a href="registroArticulo.html">Ingresar producto nuevo</a><br>
+            <a href="ingresarMetodoPago.html">Medios de pago</a><br>
+            <a href="ingresarMetodoPago2.html">Confirmacion pagos</a><br>
         </div>
         <div class="divfooter">
             <label for="">Redes Sociales</label><br>
@@ -54,8 +57,8 @@
         </div>
         <div class="divfooter">
             <label for="">Cliente</label><br>
-            <a href="pantalla6.html">Datos de entrega</a><br>
-            <a href="pantalla1.html">Registrate</a><br>
+            <a href="entregaPedido.html">Datos de entrega</a><br>
+            <a href="registro.html">Registrate</a><br>
         </div>
     </footer>
 </body>
