--- a/html/inicioSesion.html
+++ b/html/inicioSesion.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/proyecto.css">
 </head>
 <body>
+    <!-- Formulario inicio de sesion -->
     <header>
         <h3>My project</h3>
         <h1>Inicio de sesion</h1>
@@ -23,22 +24,23 @@
             <p id="incorrecto"></p>
             <button type="button" class="btn2" onclick="ingresar()">Entrar</button>
         <p>
-            <a class="aRedireccion" href="/html/pantalla1.html">¿Nuevo aqui? Registrate</a>
+            <a class="aRedireccion" href="/html/registro.html">¿Nuevo aqui? Registrate</a>
         </p>
     </form>
-
+    
+    <!-- Pie de pagina o footer para enlaces a pantalla adicionales -->
     <h3 class="mapa">Mapa de navegacion</h3>
     <footer>
         <div class="divfooter">
             <label for="">Acerca de</label><br>
             <a href="../index.html">Inicio</a><br>
-            <a href="/html/pantalla2.html">Iniciar sesion</a><br>
+            <a href="/html/inicioSesion.html">Iniciar sesion</a><br>
         </div>
         <div class="divfooter">
             <label for="###">Vendedor</label><br>
-            <a href="/html/pantalla3.html">Ingresar producto nuevo</a><br>
-            <a href="/html/pantalla4.html">Medios de pago</a><br>
-            <a href="/html/pantalla5.html">Confirmacion pagos</a><br>
+            <a href="/html/registroArticulo.html">Ingresar producto nuevo</a><br>
+            <a href="/html/ingresarMetodoPago.html">Medios de pago</a><br>
+            <a href="/html/ingresarMetodoPago2.html">Confirmacion pagos</a><br>
         </div>
         <div class="divfooter">
             <label for="">Redes Sociales</label><br>
@@ -49,8 +51,8 @@
         </div>
         <div class="divfooter">
             <label for="">Cliente</label><br>
-            <a href="/html/pantalla6.html">Datos de entrega</a><br>
-            <a href="/html/pantalla1.html">Registrate</a><br>
+            <a href="/html/entregaPedido.html">Datos de entrega</a><br>
+            <a href="/html/registro.html">Registrate</a><br>
         </div>
     </footer>
     <script src="..//js/proyecto.js"></script>
