--- a/html/listaPedidos.html
+++ b/html/listaPedidos.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../css/proyecto.css">
 </head>
 <body>
+    <!-- Pantalla lista de pedidos y estado de la compra -->
+    <!-- Encabezado de la pagina  -->
     <header class="headerIndex">
         <ul class="ul1">
             <li>
@@ -20,13 +22,14 @@
             </ul>
         </li>
         </ul>
-
+        <!-- Barra de busqueda -->
         <div class="divIndex">
                 <input type="text" placeholder="Buscar..." class="inputIndex">
                 <button class="btn16"><img src="../img/glassIcon.png" alt="" class="imgIndex2"></button>
         </div>
     </header>
     <button class="btn20"><a href="../index.html">Ir al inicio</a></button>
+    <!-- Formulario que especifica los pedidos actuales y anteriores no dinamico -->
     <form action="" class="formP8">
         <div class="divMainP8">
             <div class="divImg">
@@ -70,20 +73,19 @@
             </div>
         </div>
     </form>
-
-
+    <!-- Pie de pagina o footer para enlaces a pantalla adicionales -->
     <h3 class="mapa">Mapa de navegacion</h3>
     <footer>
         <div class="divfooter">
             <label for="">Acerca de</label><br>
             <a href="index.html">Inicio</a><br>
-            <a href="/html/pantalla2.html">Iniciar sesion</a>
+            <a href="/html/inicioSesion.html">Iniciar sesion</a>
         </div>
         <div class="divfooter">
             <label for="###">Vendedor</label><br>
-            <a href="/html/pantalla3.html">Ingresar producto nuevo</a><br>
-            <a href="/html/pantalla4.html">Medios de pago</a><br>
-            <a href="/html/pantalla5.html">Confirmacion pagos</a><br>
+            <a href="/html/registroArticulo.html">Ingresar producto nuevo</a><br>
+            <a href="/html/ingresarMetodoPago.html">Medios de pago</a><br>
+            <a href="/html/ingresarMetodoPago2.html">Confirmacion pagos</a><br>
         </div>
         <div class="divfooter">
             <label for="">Redes Sociales</label><br>
@@ -94,8 +96,8 @@
         </div>
         <div class="divfooter">
             <label for="">Cliente</label><br>
-            <a href="/html/pantalla6.html">Datos de entrega</a><br>
-            <a href="/html/pantalla1.html">Registrate</a><br>
+            <a href="/html/entregaPedido.html">Datos de entrega</a><br>
+            <a href="/html/registro.html">Registrate</a><br>
         </div>
     </footer>
 </body>
