--- a/html/registroArticulo.html
+++ b/html/registroArticulo.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../css/proyecto.css">
 </head>
 <body>
+    <!-- Registro de articulo -->
     <div class="divPrueba">
         <div class="divP3">
             <h3 class="h3P3">My project</h3>
@@ -14,6 +15,7 @@
             <img src="../img/imagen3.png" alt="Manos" class="imgP3">
         </div>
         <div>
+            <!-- Formulario para ingresar un producto rol de vendedor -->
             <h4 class="h4P3">Ingrese los datos del producto a vender</h4>
             <form action="" class="form2">
                 <p>
@@ -40,18 +42,19 @@
                 </p>
             </form>
         </div>
+        <!-- Pie de pagina o footer para enlaces a pantalla adicionales -->
         <h3 class="mapa">Mapa de navegacion</h3>
         <footer>
             <div class="divfooter">
                 <label for="">Acerca de</label><br>
                 <a href="../index.html">Inicio</a><br>
-                <a href="pantalla2.html">Iniciar sesion</a><br>
+                <a href="inicioSesion.html">Iniciar sesion</a><br>
             </div>
             <div class="divfooter">
                 <label for="###">Vendedor</label><br>
-                <a href="pantalla3.html">Ingresar producto nuevo</a><br>
-                <a href="pantalla4.html">Medios de pago</a><br>
-                <a href="pantalla5.html">Confirmacion pagos</a><br>
+                <a href="registroArticulo.html">Ingresar producto nuevo</a><br>
+                <a href="ingresarMetodoPago.html">Medios de pago</a><br>
+                <a href="ingresarMetodoPago2.html">Confirmacion pagos</a><br>
             </div>
             <div class="divfooter">
                 <label for="">Redes Sociales</label><br>
@@ -62,8 +65,8 @@
             </div>
             <div class="divfooter">
                 <label for="">Cliente</label><br>
-                <a href="pantalla6.html">Datos de entrega</a><br>
-                <a href="pantalla1.html">Registrate</a><br>
+                <a href="entregaPedido.html">Datos de entrega</a><br>
+                <a href="registro.html">Registrate</a><br>
             </div>
         </footer>
     </div>
