--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <title>Mi primer proyecto</title>
     <link rel="stylesheet" href="css/proyecto.css">
 </head>
-<body>
+<!-- Pantalla principal sin inicio de sesion -->
+<!-- Encabezado de la pagina  -->
     <header class="headerIndex">
         <ul class="ul1">
             <li>
                 <button class="btn15" id="btnDropDown"><img src="img/dropdownicon.png" alt="" class="imgIndex"></button>
                 <ul class="dropDown">
-                    <li><a href="html/pantalla8.html" class="aIndex">Mis pedidos</a></li>
+                    <li><a href="html/listaPedidos.html" class="aIndex">Mis pedidos</a></li>
                     <li><a href="" class="aIndex">Segunda opcion</a></li>
                     <li><a href="" class="aIndex">Tercera opcion</a></li>
                     <li><a href="" class="aIndex">Cuarta opcion</a></li>
@@ -20,17 +21,18 @@
                 </ul>
             </li>
         </ul>
-
+        <!-- Barra de busqueda -->
         <div class="divIndex">
                 <input type="text" placeholder="Buscar..." class="inputIndex" id="buscar">
                 <button class="btn16" id="btnBuscar"><img src="img/glassIcon.png" alt="" class="imgIndex2"></button>
         </div>
 
         <div class="divIndex2">
-            <a href="html/pantalla2.html" class="aIndex2">Iniciar sesion</a>
-            <a href="html/pantalla1.html" class="aIndex2">Registrarse</a>
+            <a href="html/inicioSesion.html" class="aIndex2">Iniciar sesion</a>
+            <a href="html/registro.html" class="aIndex2">Registrarse</a>
         </div>
     </header>
+    <!-- Prototipo de vista productos no dinamicos -->
     <h2 class="h2Index">Productos</h2>
     <p class="pIndex2">Categoria: Juegos</p>
     <div class="divIndex3">
@@ -39,42 +41,42 @@
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
         <div class="divIndex4">
             <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
         <div class="divIndex4">
             <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
         <div class="divIndex4">
             <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
         <div class="divIndex4">
             <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
         <div class="divIndex4">
             <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
         
     </div>
@@ -85,57 +87,57 @@
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
         <div class="divIndex4">
             <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
         <div class="divIndex4">
             <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
         <div class="divIndex4">
             <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
         <div class="divIndex4">
             <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
         <div class="divIndex4">
             <img src="img/caja.png" alt="Primer producto" class="imgIndex3">
             <p class="pIndex">Nombre producto</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia error temporibus hic alias quasi voluptatem veniam molestias ipsam laboriosam ipsa?</p>
             <p class="pIndex">Precio: $$$$$</p>
-            <button class="btn17"><a href="html/pantalla7.html" class="aP7">Ver mas</a></button>
+            <button class="btn17"><a href="html/vistaProducto.html" class="aP7">Ver mas</a></button>
         </div>
     </div>
-    
+    <!-- Pie de pagina o footer para enlaces a pantalla adicionales -->
     <h3 class="mapa">Mapa de navegacion</h3>
     <footer>
         <div class="divfooter">
             <label for="">Acerca de</label><br>
             <a href="index.html">Inicio</a><br>
-            <a href="/html/pantalla2.html">Iniciar sesion</a>
+            <a href="/html/inicioSesion.html">Iniciar sesion</a>
         </div>
         <div class="divfooter">
             <label for="###">Vendedor</label><br>
-            <a href="/html/pantalla3.html">Ingresar producto nuevo</a><br>
-            <a href="/html/pantalla4.html">Medios de pago</a><br>
-            <a href="/html/pantalla5.html">Confirmacion pagos</a><br>
+            <a href="/html/registroArticulo.html">Ingresar producto nuevo</a><br>
+            <a href="/html/ingresarMetodoPago.html">Medios de pago</a><br>
+            <a href="/html/ingresarMetodoPago2.html">Confirmacion pagos</a><br>
         </div>
         <div class="divfooter">
             <label for="">Redes Sociales</label><br>
@@ -146,8 +148,8 @@
         </div>
         <div class="divfooter">
             <label for="">Cliente</label><br>
-            <a href="/html/pantalla6.html">Datos de entrega</a><br>
-            <a href="/html/pantalla1.html">Registrate</a><br>
+            <a href="/html/entregaPedido.html">Datos de entrega</a><br>
+            <a href="/html/registro.html">Registrate</a><br>
         </div>
     </footer>
 </body>
